se saca la informacion de las facturas

--- a/ApiPruebaVive/appsettings.json
+++ b/ApiPruebaVive/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=172.17.0.3;Port=5432;Username=visapline;Password=visapline;Database=desarrollo;Pooling=false;Minimum Pool Size=0;CommandTimeout=0;Timeout=600;ConnectionIdleLifetime=600;KeepAlive=10;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=172.17.0.3;Port=5432;Username=visapline;Password=visapline;Database=visapline;Pooling=false;Minimum Pool Size=0;CommandTimeout=0;Timeout=600;ConnectionIdleLifetime=600;KeepAlive=10;"
+    },
 
   "Jwt": {
     "Key": "cIXdSuayvpQUaucRqCrKwGwNcmsJFapO1234",
