--- a/ApiPruebaVive/appsettings.json
+++ b/ApiPruebaVive/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "DefaultConnection": "Host=172.17.0.3;Port=5432;Username=visapline;Password=visapline;Database=desarrollo;Pooling=false;Minimum Pool Size=0;CommandTimeout=0;Timeout=600;ConnectionIdleLifetime=600;KeepAlive=10;"
+        "DefaultConnection": "Host=172.17.0.3;Port=5432;Username=visapline;Password=visapline;Database=prueba;Pooling=false;Minimum Pool Size=0;CommandTimeout=0;Timeout=600;ConnectionIdleLifetime=600;KeepAlive=10;"
     },
 
   "Jwt": {
